test/sema/exercise/member_instantiation_dataflow.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
  y: number,
}

fn main(): unit {
  let n: number;

  let y = S { 
    x: 1, 
    y: n,
    // CHECK: [[# @LINE - 1 ]]:8: error: 'n' is not initialized
  };
}
